# py-allotax

./: DECISIONS.md  pyproject.toml
example_data/: wiki-bigrams-2025-04-21.json  wiki-bigrams-2025-08-21.json
src/py_allotax/: generate_svg.py  generate_svg_minimum.js  package-lock.json  package.json  utils.py
tests/: test_bigrams.html
